@@ -7,6 +7,13 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2024 FEB 05a
+  * in model/chem/_NH3_Plasma_10s/arakoni2007.c
+    - improved Arakonic model reactions
+  * in model/thermo/_generic/electronimpact.c
+    - added _EoverN_from_Te_NO()
+
+
 2024 FEB 02a
   * in model/chem/_NH3_Plasma_10s/chem.c
     - added CHEMMODEL_ARAKONI2007 model
